--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
         Shake vigorously
       </div>
       <div id="warning">
-      Developed By (Mobile Ver.) :
+      Developed By :
       	<a href="http://www.facebook.com/spaceman4walk">Rahul Bohra</a>
-        <br>      
-         Credit : <a href="http://www.staggeringbeauty.com/">Staggeringbeauty Team</a>
       </div>
       <div id="embed-button">
       </div>
