child browser applied to authors link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div id="warning">
       Developed By :
-      	<a href="http://www.facebook.com/spaceman4walk">Rahul Bohra</a>
+		<a href="#" onclick="window.plugins.childBrowser.showWebPage('http://www.facebook.com/spaceman4walk')">Rahul Bohra</a>
       </div>
       <div id="embed-button">
       </div>
