child browser scripts

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
     <head>
-      <script type="text/javascript" src="lib/paper.js"></script>
+		<script src="phonegap.js"></script>
+	    <script src="childbrowser.js"></script>
+        <script type="text/javascript" src="lib/paper.js"></script>
       <!--<script type="text/javascript" src="lib/dat.gui.min.js"></script>-->
       <script type="text/javascript" src="lib/Tween.js"></script>
       <script type="text/javascript" src="lib/traer.js"></script>
